<resources>
  <string name="app_name">Project1</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="username">Username</string>
  <string name="have_no_account_register">No account yet? Create one</string>
  <string name="confirm_password">Confirm password</string>
  <string name="register">Register</string>
  <string name="already_have_an_account_log_in">Already have an account? Log in</string>
  <string name="pattern">^[\\w.-]+@([\\w\\-]+\\.)+[A-Z]{2,4}$</string>

  <string-array name="account_settings">
    <item>History</item>
    <item>Login</item>
  </string-array>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="done">Done</string>
</resources>
